feat: 日记组件实现;调整整体背景色

--- a/src/app.less
+++ b/src/app.less
@@ -1,11 +1,27 @@
+// 头部导航栏背景色
 @navHeaderBgColor: #ffffff;
+// 导航选中态背景色
 @navActBgColor: #ecf2fe;
+// 导航选中态颜色色
 @navColor: #0052d9;
+// 主体间距
 @contentPadding: 10rpx 20rpx;
+// 信息间距
 @infoPadding: 15rpx 20rpx;
+// 主体圆角
 @ContentRadius: 10rpx;
+// 边框颜色
 @borderColor: #f9f9f9;
+// 字体大小
 @fontTitleSize: 32rpx;
+// 副标题大小
 @fontSubTitleSize: 26rpx;
+// 正文文字大小
 @fontContentSize: 28rpx;
+// 副标题文字颜色
 @fontSubTitleColor: #b0b0b0;
+// 主体背景色
+@contentBgColor: #ffffff;
+page{
+  background-color: #f7f8fa;
+}
