--- a/src/app.less
+++ b/src/app.less
@@ -22,6 +22,8 @@
 @fontSubTitleColor: #b0b0b0;
 // 主体背景色
 @contentBgColor: #ffffff;
+// 页面背景色
+@pageBgColor: #f7f8fa;
 page{
-  background-color: #f7f8fa;
+  background-color: @pageBgColor;
 }
